# hku-econ6087

./: LICENSE  README.md  assignment.tex  assignment_1.tex  main.py  pyproject.toml  test.ipynb  tutorial_presentation.tex
01_introduction/: 01_introduction.tex
02_assignment_1/: question_1.ipynb
03_assignment_2/: assignment_2.tex
data/: tnews_test.parquet  tnews_train.parquet
