[project]
name = "hku-econ6087"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "ipywidgets>=8.1.8",
    "jieba>=0.42.1",
    "jupyterlab>=4.5.3",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
